# image-comparison

./: README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: comparisons.py
backend/app/config/: config.py
backend/app/database/: __init__.py  base.py  in_memory.py
backend/app/lib/: __init__.py  factory.py
backend/app/lib/comparison/: __init__.py  base.py  pixel.py  structual.py
backend/app/lib/visualisation/: __init__.py  base.py  contour.py  heatmap.py
backend/app/models/: __init__.py  comparison.py  visualisation.py
backend/scripts/: example.py  start_server.sh
frontend/: package-lock.json  package.json
frontend/app/: page.tsx
frontend/components/: form.tsx  result.tsx
